STYLE-troubleshoot layout issue

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -560,6 +560,7 @@ textarea[placeholder] {
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
   grid-gap: 1rem;
+  margin-top: 50px;
 }
 
 .card-container {
@@ -654,12 +655,22 @@ p.work-title {
 -------------------------------------------------------------------*/
 #clients {
   display: flex;
+  flex-direction: column;
   background-color: var(--color-background);
+  padding-bottom: 0;
+}
+
+.client_intro {
+  margin-bottom: 50px;
+}
+
+.client_main {
+  display:flex;
 }
 
 .testimonials {
   flex: 5 1;
-  padding: 0 5%;
+  padding: 5px;
 }
 
 .testimonials-quote {
@@ -704,21 +715,15 @@ span.arrow {
   display: flex;
   flex: 2 1;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   color: grey;
   background-color: var(--color-background-alt);
-}
-
-.companies h3 {
   padding: 5px 10px;
 }
 
 .brands {
   padding: 0;
   margin: 0;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
 }
 
 .brand {
